--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "debug": "^4.3.1",
     "express": "^4.17.1",
     "gravatar": "^1.8.1",
+    "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mongoose": "^5.11.15",
     "request": "^2.88.2",
     "winston": "^3.3.3",
