--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "social developer network",
   "main": "server.js",
   "scripts": {
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "client": "npm start --prefix ../client/",
+    "dev": "concurrently \"npm run server \" \"npm run client\""
   },
   "author": "JHorlamide",
   "license": "ISC",
